RE #173: - Added Label and Label strong examples to checkbox. Also tested that current CheckBox implementations will still work. - Styled block popover so that it is less jumpy in the example using calc for height - Fixed z-index of sidenav and header when sidebar is overlayed on mobile

--- a/demo/src/screens/popovers/styles.scss
+++ b/demo/src/screens/popovers/styles.scss
@@ -2,7 +2,7 @@
 
 .popover-scrollable {
   width: 50vw;
-  height: 70vh;
+  height: calc(62vh - 124px);
   min-height: 200px;
   max-width: 670px;
   min-width: 238px;
