--- a/src/components/form/styles.scss
+++ b/src/components/form/styles.scss
@@ -131,6 +131,11 @@ label {
   letter-spacing: 0;
   font-weight: 400;
   color: $body-color;
+
+  & .form-control-label {
+    text-transform: uppercase;
+    font-size: .9em;
+  }
 }
 
 
